--- a/views/admin/include/header.ejs
+++ b/views/admin/include/header.ejs
@@ -53,6 +53,12 @@
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="/adminpanel/assets/js/config.js"></script>
+
+    <style>
+      .swal2-container {
+        z-index: 20000 !important;
+      }
+    </style>
   </head>
 
   <body>
