--- a/views/admin/message/messageDetail.ejs
+++ b/views/admin/message/messageDetail.ejs
@@ -36,7 +36,11 @@
                                 </div>
                             </div>
                             <hr class="my-0" />
-                            <div class="footer p-2 d-flex justify-content-end align-items-center">
+                            <div class="footer p-2 d-flex justify-content-between align-items-center">
+                                <div class="font12px p-2 text-primary d-flex justify-content-between align-items-center">
+                                    <i class="bx bx-phone-incoming text-primary"></i>
+                                    <%= message.phoneNumber %>
+                                </div>
                                 <button type="submit" class="btn btn-sm btn-primary font12px" data-toggle="modal" data-target="#sendMessageModal">
                                     <i class="bx bx-conversation"></i>
                                     Yanıtla
