--- a/views/admin/include/footer.ejs
+++ b/views/admin/include/footer.ejs
@@ -51,17 +51,19 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
 
 <script>
     $(document).ready(function () {
-    let sideelements =  ['dashboard','users','services','franchises','referances','messages'];
-        let href = $(location).attr('href');
-        sideelements.forEach(element => {
-          if (href.indexOf(element) > -1) {
-              $("." + element).addClass("active");
-              $("." + element).parent().parent().addClass("open");
-          }
-        });
+      let sideelements =  ['dashboard','users','services','franchises','referances','messages'];
+      let href = $(location).attr('href');
+      sideelements.forEach(element => {
+        if (href.indexOf(element) > -1) {
+          $("." + element).addClass("active");
+          $("." + element).parent().parent().addClass("open");
+        }
+      });
+      $('#summernote').summernote();
     });
     $("#logout").on('click',(e) => {
         $.ajax({
