--- a/views/admin/services/createService.ejs
+++ b/views/admin/services/createService.ejs
@@ -48,7 +48,7 @@
                                 </div>
                                 <div class="mb-3 col-12">
                                   <label for="description" class="form-label font10px">Hizmet açıklaması</label>
-                                  <textarea class="form-control font12px" type="text" name="description" id="description"></textarea>
+                                  <textarea class="form-control font12px" type="text" name="description" id="summernote"></textarea>
                                 </div>
                               </div>
                               <div class="mt-2">
