--- a/views/admin/services/serviceDetail.ejs
+++ b/views/admin/services/serviceDetail.ejs
@@ -25,7 +25,7 @@
                             </div>
                             <div class="mb-3 col-12">
                               <label for="description" class="form-label font10px">Açıklama</label>
-                              <textarea class="form-control font12px" type="text" name="description" id="description" style="min-height: 200px;"><%=service.description%></textarea>
+                              <textarea class="form-control font12px" type="text" name="description" id="summernote" style="min-height: 200px;"><%=service.description%></textarea>
                             </div>
                             <div class="mb-3 col-12">
                               <label for="role" class="form-label font10px">Durumu</label>
