--- a/views/admin/services/services.ejs
+++ b/views/admin/services/services.ejs
@@ -87,7 +87,9 @@
                                     <tr>
                                         <td style="font-size: 12px;"><b><%=service.name%></b></td>
                                         
-                                        <td style="font-size: 12px;"><%=service.description.substring(0, 20)+"..."%></td>
+                                        <td style="font-size: 12px;"> 
+                                            <%= service.description.replace(/<\/?[^>]+(>|$)/g, "").substring(0, 20)+"..." %> 
+                                        </td>
 
                                         <td style="font-size: 12px;">
                                             <ul class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
