--- a/views/admin/message/messageDetail.ejs
+++ b/views/admin/message/messageDetail.ejs
@@ -77,6 +77,7 @@
                       class="form-control font12px"
                       name="message"
                       placeholder="Mesaj"
+                      id="summernote"
                     ></textarea>
                   </div>
                 </div>
