--- a/views/admin/createUser.ejs
+++ b/views/admin/createUser.ejs
@@ -1,58 +1,57 @@
 <%- include('./include/header.ejs'); -%>
-          <!-- Content wrapper -->
-          <div class="content-wrapper">
-            <!-- Content -->
-            <div class="container-xxl flex-grow-1 container-p-y">
-              <div class="row">
-                <div class="col-lg-12 mb-4 order-0">
-                    <div class="card mb-4">
-                        <h5 class="card-header font12px">Kullanıcı Ekle</h5>
-                        <hr class="my-0" />
-                          <form id="createUser" method="POST" onsubmit="return false">
-                            <div class="card-body">
-                              <div class="row">
-                                <div class="mb-3 col-md-6">
-                                  <label for="firstName" class="form-label font10px">ad</label>
-                                  <input
-                                    class="form-control font12px"
-                                    type="text"
-                                    id="name"
-                                    name="name"
-                                    autofocus
-                                  />
-                                </div>
-                                <div class="mb-3 col-md-6">
-                                  <label for="lastName" class="form-label font10px">soyad</label>
-                                  <input class="form-control font12px" type="text" name="surname" id="surname" />
-                                </div>
-                                <div class="mb-3 col-md-6">
-                                  <label for="email" class="form-label font10px">email</label>
-                                  <input class="form-control font12px" type="text" name="email" id="email" />
-                                </div>
-                                <div class="mb-3 col-md-6">
-                                  <label for="username" class="form-label font10px">kullanıcı adı</label>
-                                  <input class="form-control font12px" type="text" name="username" id="username" />
-                                </div>
-                                <div class="mb-3 col-md-6">
-                                  <label for="password" class="form-label font10px">şifre</label>
-                                  <input class="form-control font12px" type="text" name="password" id="password" />
-                                </div>
-                              </div>
-                              <div class="mt-2">
-                                <button type="submit" class="btn btn-primary me-2 font12px">Ekle</button>
-                                <button type="reset" class="btn btn-outline-primary font12px">
-                                  <a style="color:black" href="http://localhost:3000/api/kurumsal/users">Geri dön</a>
-                                </button>
-                              </div>
-                            </div>
-                          </form>
-                        </div>
-                        <!-- /Account -->
-                      </div>
+<div class="content-wrapper">
+  <div class="container-xxl flex-grow-1 container-p-y">
+    <div class="row d-flex justify-content-center">
+      <div class="col-lg-12 mb-4 order-0">
+        <div class="card mb-4">
+          <h5 class="card-header font12px">Kullanıcı Ekle</h5>
+          <hr class="my-0" />
+          <form id="createUser" method="POST" onsubmit="return false">
+            <div class="card-body">
+              <div class="row d-flex justify-content-center align-items-center">
+                <div class="mb-3 col-md-12">
+                  <div class="mb-3 col-md-12">
+                    <label for="firstName" class="form-label font10px">ad</label>
+                    <input
+                      class="form-control font12px"
+                      type="text"
+                      id="name"
+                      name="name"
+                      placeholder="İsim"
+                      autofocus
+                    />
+                  </div>
+                  <div class="mb-3 col-md-12">
+                    <label for="lastName" class="form-label font10px">soyad</label>
+                    <input class="form-control font12px" type="text" name="surname" id="surname" placeholder="Soyisim" />
+                  </div>
+                  <div class="mb-3 col-md-12">
+                    <label for="email" class="form-label font10px">email</label>
+                    <input class="form-control font12px" type="text" name="email" id="email" placeholder="Email adresi" />
+                  </div>
+                  <div class="mb-3 col-md-12">
+                    <label for="username" class="form-label font10px">kullanıcı adı</label>
+                    <input class="form-control font12px" type="text" name="username" id="username" placeholder="Kullanıcı adı" />
+                  </div>
+                  <div class="mb-3 col-md-12">
+                    <label for="password" class="form-label font10px">şifre</label>
+                    <input class="form-control font12px" type="text" name="password" id="password" placeholder="Şifre" />
+                  </div>
+                  <div class="mt-2">
+                    <button type="submit" class="btn btn-primary me-2 font12px">Ekle</button>
+                    <button type="reset" class="btn btn-outline-primary font12px">
+                      <a style="color:black" href="http://localhost:3000/api/kurumsal/users">Geri dön</a>
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
-            <!-- / Content -->
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <%- include('./include/footer.ejs'); -%>
 <script>
     $("#createUser").on("submit",function(e) {
